--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CyberSource.Authentication" version="0.0.0.17" targetFramework="net461" />
+  <package id="CyberSource.Authentication" version="0.0.0.15" targetFramework="net461" />
+  <package id="jose-jwt" version="2.4.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="NLog" version="4.5.10" targetFramework="net461" />
+  <package id="NUnit" version="3.10.1" targetFramework="net461" />
   <package id="RestSharp" version="105.2.3" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
